fix horizontal scroll

--- a/styles/common_styles.css
+++ b/styles/common_styles.css
@@ -3,6 +3,12 @@ body {
   overflow-x: hidden;
 }
 
+.app-wrapper {
+  overflow-x: hidden;
+  width: 100%;
+  height: 100%;
+}
+
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
